--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,8 +1,6 @@
 {% set name = "portpicker" %}
-{% set version = "1.3.1" %}
+{% set version = "1.5.2" %}
 {% set file_ext = "tar.gz" %}
-{% set hash_type = "sha256" %}
-{% set hash_value = "d2cdc776873635ed421315c4d22e63280042456bbfa07397817e687b142b9667" %}
 
 package:
   name: {{ name|lower }}
@@ -11,29 +9,34 @@ package:
 source:
   fn: {{ name }}-{{ version }}.{{ file_ext }}
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.{{ file_ext }}
-  {{ hash_type }}: {{ hash_value }}
+  sha256: "c55683ad725f5c00a41bc7db0225223e8be024b1fa564d039ed3390e4fd48fb3"
 
 build:
   number: 0
-  script: python setup.py install
+  script: {{ PYTHON }} -m pip install . --no-deps --no-build-isolation -vvv
+  skip: true  # [py<37]
 
 requirements:
   host:
     - python
     - setuptools
+    - pip
+    - wheel
 
   run:
     - python
+    - psutil
 
 test:
   requires:
-    - mock  [py27]
+    - pip
   imports:
     - portpicker
   source_files:
     - src/tests
   commands:
     - python src/tests/portpicker_test.py
+    - pip check
 
 about:
   home: https://pypi.python.org/pypi/portpicker
